--- a/.github/workflows/cron-autoupdate.yml
+++ b/.github/workflows/cron-autoupdate.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           python-version: 3.x
 
+      - name: Prepare PyCurl
+        run: sudo apt install libcurl4-openssl-dev libssl-dev
+
+
       - name: Install proxy-checker-python
         run: pip install git+https://github.com/HeronErin/proxy-checker-python
 
@@ -31,5 +35,5 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
-          git commit -m "http: $(cat http.txt | wc -l) socks4: $(cat socks4.txt | wc -l) socks5: $(cat socks5.txt | wc -l) json: $(cat json_output.txt | wc -l)  at $(date)"
+          git commit -m "http: $(cat http.txt | wc -l) socks4: $(cat socks4.txt | wc -l) socks5: $(cat socks5.txt | wc -l) json: $(cat json_output.txt | wc -l) at $(date)"
           git push
